# pyupfile

./: .gitignore  README.md  main.py  main.pyw  requirements.txt  setup.cfg
pyupfile/: __init__.py  __main__.py
