[metadata]
name = pyupfile
license = MIT
license_file = LICENSE
version = 1.0.1
author = Hemish
author_email = hemish04082005@gmail.com
description = pyupfile allows you to upload any file to https://file.io site using their API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, uploader, upload, file, python3
platforms = any
url = https://github.com/hemish04082005/pyupfile/
download_url = https://github.com/hemish04082005/pyupfile/archive/1.0.1.tar.gz
project_urls =
    Bug Tracker = https://github.com/hemish04082005/pyupfile/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.4
install_requires = 
	requests
	clipboard

[options.entry_points]
console_scripts =
	pyupfile = pyupfile.__main__:main